--- a/index.ipynb
+++ b/index.ipynb
@@ -202,14 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return "
+    "    return first_neighbor\n",
+    "\n"
    ]
   },
   {
