--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return iffirst_neighbor['street'] - second_neighbor['street']"
+    "    return if (first_neighbor['street'] - second_neighbor['street'])"
    ]
   },
   {
