--- a/index.ipynb
+++ b/index.ipynb
@@ -207,6 +207,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
+    "    distance = \n",
     "    return if (first_neighbor['street'] - second_neighbor['street'])"
    ]
   },
