automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    return if (first_neighbor['street'] - second_neighbor['street'])"
+    "    return if (second_neighbor['street'] - second_neighbor['street'])"
    ]
   },
   {
