--- a/index.ipynb
+++ b/index.ipynb
@@ -202,13 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-d288c46d58ee>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-d288c46d58ee>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return if (second_neighbor['street'] - first_neighbor['street'])\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    return if (second_neighbor['street'] - second_neighbor['street'])"
+    "    return second_neighbor['street'] - first_neighbor['street']"
    ]
   },
   {
