automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,8 @@
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    if ()\n",
+    "    if (distance < 0):\n",
+    "        distance \n",
     "    return second_neighbor['street'] - first_neighbor['street']"
    ]
   },
