--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
     "    if (distance < 0):\n",
-    "        distance \n",
+    "        distance * -1\n",
     "    return second_neighbor['street'] - first_neighbor['street']"
    ]
   },
