--- a/index.ipynb
+++ b/index.ipynb
@@ -208,9 +208,9 @@
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    if (distance < 0):\n",
+    "    #if (distance < 0):\n",
     "        distance * -1\n",
-    "    return second_neighbor['street'] - first_neighbor['street']"
+    "    return (second_neighbor['street'] - first_neighbor['street']) * -1"
    ]
   },
   {
