automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,15 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    #if (distance < 0):\n",
+    "    if (distance < 0):\n",
     "        distance * -1\n",
-    "    return (second_neighbor['street'] - first_neighbor['street']) * -1"
+    "    return distance"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
