automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,10 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    distance = first_neighbor['street'] - second_neighbor['street']\n",
+    "    if (distance < 0):\n",
+    "        distance * -1\n",
+    "    return distance"
    ]
   },
   {
