--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     "    distance = first_neighbor['street'] - second_neighbor['street']\n",
     "    if (distance < 0):\n",
     "        distance * -1\n",
-    "    return distance"
+    "    return first_neighbor"
    ]
   },
   {
