automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,14 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    distance = first_neighbor['street'] - second_neighbor['street']\n",
+    "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    if (distance < 0):\n",
     "        distance * -1\n",
     "    return first_neighbor"
@@ -264,11 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Fred', 'avenue': 4, 'street': 8}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avenue_distance(fred, natalie) #  1"
    ]
