--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,21 +257,21 @@
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    if (distance < 0):\n",
     "        distance * -1\n",
-    "    return first_neighbor"
+    "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Fred', 'avenue': 4, 'street': 8}"
+       "-1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
