automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,20 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    #if (distance < 0):\n",
-    "        distance * -1\n",
+    "        #distance * -1\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "-1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
