automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,8 @@
     }
    ],
    "source": [
-    "avenue_distance(fred, natalie) #  1"
+    "avenue_distance(fred, natalie) #  1\n",
+    "print()"
    ]
   },
   {
