automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,9 +275,7 @@
     }
    ],
    "source": [
-    "avenue_distance(fred, natalie) #  1\n",
-    "print(fred)\n",
-    "print(natalie)"
+    "avenue_distance(fred, natalie) #  1"
    ]
   },
   {
