automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,20 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Fred', 'avenue': 4, 'street': 8}\n",
-      "{'name': 'Natalie', 'avenue': 5, 'street': 4}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "avenue_distance(fred, natalie) #  1"
+    "avenue_distance(fred, natalie) #  1\n",
+    "print(fred)\n",
+    "print(natalie)"
    ]
   },
   {
