automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,18 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Fred', 'avenue': 4, 'street': 8}\n",
+      "{'name': 'Natalie', 'avenue': 5, 'street': 4}\n"
+     ]
     }
    ],
    "source": [
