automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,8 +276,8 @@
    ],
    "source": [
     "avenue_distance(fred, natalie) #  1\n",
-    "print(fred)\n",
-    "print(natalie)"
+    "#print(fred)\n",
+    "#print(natalie)"
    ]
   },
   {
