automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,6 +255,7 @@
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    print()\n",
     "    #if (distance < 0):\n",
     "        #distance * -1\n",
     "    return distance"
