--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,8 @@
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
-    "    print()\n",
+    "    print(irst_neighbor['avenue'])\n",
+    "    print('minus')\n",
     "    #if (distance < 0):\n",
     "        #distance * -1\n",
     "    return distance"
