automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    print(first_neighbor['avenue'])\n",
     "    print('minus')\n",
-    "    print()\n",
+    "    print(second_neighbor['avenue'])\n",
     "    #if (distance < 0):\n",
     "        #distance * -1\n",
     "    return distance"
@@ -265,16 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Fred', 'avenue': 4, 'street': 8}\n",
-      "{'name': 'Natalie', 'avenue': 5, 'street': 4}\n"
+      "4\n",
+      "minus\n",
+      "5\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
