automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,6 +257,8 @@
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    if (distance < 0):\n",
     "        print('negative number')\n",
+    "        else:\n",
+    "            print()\n",
     "    return distance"
    ]
   },
