automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,8 +257,8 @@
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    if (distance < 0):\n",
     "        print('negative number')\n",
-    "        else:\n",
-    "            print()\n",
+    "    else:\n",
+    "        print('zero or positive')\n",
     "    return distance"
    ]
   },
