automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,16 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "minus\n",
-      "5\n"
+      "negative number\n"
      ]
     },
     {
@@ -282,7 +280,7 @@
        "-1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
