--- a/index.ipynb
+++ b/index.ipynb
@@ -249,21 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
     "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    if (distance < 0):\n",
-    "        distance * (1)\n",
+    "        distance * (0-1)\n",
     "    \n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "-1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
