automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    distance = abs(first_neighbor['avenue'] - second_neighbor['avenue'])\n",
     "    if (distance < 0):\n",
     "        distance * (-1)\n",
     "    return distance"
