automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,14 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    distance = first_neighbor['street'] - second_neighbor['street']\n",
-    "    if (distance < 0):\n",
-    "        distance * -1\n",
+    "    distance = abs(first_neighbor['street'] - second_neighbor['street'])\n",
+    "\n",
     "    return distance"
    ]
   },
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +230,7 @@
        "4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
