automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -268,15 +268,13 @@
        "1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "avenue_distance(fred, natalie) #  1\n",
-    "#print(fred)\n",
-    "#print(natalie)"
+    "avenue_distance(fred, natalie) #  1\n"
    ]
   },
   {
