--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a2"
+    "    a2 = first_neighbor * first_neighbor\n",
+    "    b2 = "
    ]
   },
   {
