automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,8 @@
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a2 = first_neighbor * first_neighbor\n",
-    "    b2 = "
+    "    b2 = second_neighbor * second_neighbor\n",
+    "    "
    ]
   },
   {
