--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,8 @@
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a2 = first_neighbor * first_neighbor\n",
     "    b2 = second_neighbor * second_neighbor\n",
-    "    c2 = a2 + b2"
+    "    c2 = a2 + b2\n",
+    "    return"
    ]
   },
   {
