--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "distance_between_neighbors_squared(fred, natalie) # 17"
+    "distance_between_neighbors_squared(fred, natalie) # 17\n"
    ]
   },
   {
