automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    stre\n",
+    "    streets = \n",
+    "    avenues = \n",
     "    a2 = first_neighbor * first_neighbor\n",
     "    b2 = second_neighbor * second_neighbor\n",
     "    c2 = a2 + b2\n",
