--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    streets = \n",
-    "    avenues = \n",
+    "    avenues = avenue_distance(first_neighbor, second_neighbor)\n",
     "    a2 = first_neighbor * first_neighbor\n",
     "    b2 = second_neighbor * second_neighbor\n",
     "    c2 = a2 + b2\n",
