automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    streets = \n",
+    "    streets = street_distance(first_neighbor, second_neighbor) # 4\n",
     "    avenues = avenue_distance(first_neighbor, second_neighbor)\n",
     "    a2 = first_neighbor * first_neighbor\n",
     "    b2 = second_neighbor * second_neighbor\n",
