automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,9 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    streets = street_distance(first_neighbor, second_neighbor) # 4\n",
+    "    streets = street_distance(first_neighbor, second_neighbor)\n",
     "    avenues = avenue_distance(first_neighbor, second_neighbor)\n",
-    "    a2 = first_neighbor * first_neighbor\n",
+    "    a2 = streets * first_neighbor\n",
     "    b2 = second_neighbor * second_neighbor\n",
     "    c2 = a2 + b2\n",
     "    return c2"
