--- a/index.ipynb
+++ b/index.ipynb
@@ -342,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    return math.sqrt( distance_between_neighbors_squared )"
+    "    return math.sqrt( distance_between_neighbors_squared(first_neighbor,second_neighbor) )"
    ]
   },
   {
