automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,12 +447,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Fred', 'avenue': 4, 'street': 8}\n"
+     ]
+    }
+   ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
-    "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
+    "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}\n",
+    "print(fred)"
    ]
   },
   {
