--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
     "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}\n",
-    "print(fred)"
+    "print(nat)"
    ]
   },
   {
