--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,8 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):   \n",
     "    distance_between = distance(fred, neighbor)\n",
-    "    return second_neighbor['distance']"
+    "    second_neighbor['distance']\n",
+    "    return second_neighbor"
    ]
   },
   {
