automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,27 +435,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):   \n",
     "    distance_between = distance(fred, neighbor)\n",
-    "    second_neighbor['distance']\n",
+    "    second_neighbor['distance'] = distance_between\n",
     "    return second_neighbor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Natalie', 'avenue': 5, 'street': 4}\n"
+      "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}\n"
      ]
     }
    ],
