--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,21 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
-    "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}\n",
-    "print(natalie)"
+    "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}\n"
    ]
   },
   {
