automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,14 +476,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
