--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for neighbor in "
+    "    \n",
+    "    for neighbor in neighbors:\n",
+    "        "
    ]
   },
   {
