automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,6 +483,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
     "    for neighbor in neighbors:\n",
+    "        distance_with_neighbor(first_neighbor, neighbor)\n",
     "        "
    ]
   },
