--- a/index.ipynb
+++ b/index.ipynb
@@ -484,6 +484,7 @@
     "    list = []\n",
     "    for neighbor in neighbors:\n",
     "        distance_with_neighbor(first_neighbor, neighbor)\n",
+    "        return \n",
     "        "
    ]
   },
