automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,8 +483,8 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
     "    for neighbor in neighbors:\n",
-    "        distance_with_neighbor(first_neighbor, neighbor)\n",
-    "        return \n",
+    "        return distance_with_neighbor(first_neighbor, neighbor)\n",
+    "         \n",
     "        "
    ]
   },
