--- a/index.ipynb
+++ b/index.ipynb
@@ -488,18 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}, {'name': 'Suzie', 'avenue': 1, 'street': 11}, {'name': 'Bob', 'avenue': 5, 'street': 8}, {'name': 'Edgar', 'avenue': 6, 'street': 13}, {'name': 'Steven', 'avenue': 3, 'street': 6}, {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]\n"
+     ]
     }
    ],
    "source": [
@@ -510,7 +507,8 @@
     "#  {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13},\n",
     "#  {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6},\n",
     "#  {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]\n",
-    "\n"
+    "\n",
+    "print(neighbors)"
    ]
   },
   {
