automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,15 +488,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}, {'name': 'Suzie', 'avenue': 1, 'street': 11}, {'name': 'Bob', 'avenue': 5, 'street': 8}, {'name': 'Edgar', 'avenue': 6, 'street': 13}, {'name': 'Steven', 'avenue': 3, 'street': 6}, {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -508,7 +511,7 @@
     "#  {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6},\n",
     "#  {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]\n",
     "\n",
-    "print(neighbors)"
+    "#print(neighbors)"
    ]
   },
   {
