--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
     "    for neighbor in neighbors:\n",
-    "        return distance_with_neighbor(first_neighbor, neighbor)"
+    "         distance_with_neighbor(first_neighbor, neighbor)"
    ]
   },
   {
