automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,9 +481,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    list = []\n",
+    "     = []\n",
     "    for neighbor in neighbors:\n",
-    "         distance_with_neighbor(first_neighbor, neighbor)"
+    "        list.append distance_with_neighbor(first_neighbor, neighbor)"
    ]
   },
   {
