automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,41 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-74-34e87c20bc75>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-74-34e87c20bc75>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    distances.append distance_with_neighbor(first_neighbor, neighbor)\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances = []\n",
     "    for neighbor in neighbors:\n",
-    "        distances.append( distance_with_neighbor(first_neighbor, neighbor)"
+    "        distances.append(distance_with_neighbor(first_neighbor, neighbor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "distance_all(fred, neighbors)\n",
     "\n",
