--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
     "    distances = []\n",
     "    for neighbor in neighbors:\n",
     "        distances.append(distance_with_neighbor(first_neighbor, neighbor))\n",
-    "    return"
+    "    distances[1,]"
    ]
   },
   {
