--- a/index.ipynb
+++ b/index.ipynb
@@ -476,20 +476,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-78-8da8d6761ecb>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-78-8da8d6761ecb>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return distances[1,..]\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances = []\n",
     "    for neighbor in neighbors:\n",
     "        distances.append(distance_with_neighbor(first_neighbor, neighbor))\n",
-    "    distances[1,]"
+    "    return distances[1,..]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
