--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances = []\n",
     "    for neighbor in neighbors:\n",
-    "        print('neighbor: {}')\n",
+    "        print('neighbor: {}'.format(neighbor))\n",
     "        distances.append(distance_with_neighbor(first_neighbor, neighbor))\n",
     "    return distances[1:]"
    ]
