--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,9 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neighbor: {'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661}\n",
+      "neighbor: {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.123105625617661}\n",
+      "neighbor: {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 4.123105625617661}\n",
+      "neighbor: {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 4.123105625617661}\n",
+      "neighbor: {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 4.123105625617661}\n",
+      "neighbor: {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -503,7 +515,7 @@
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
