--- a/index.ipynb
+++ b/index.ipynb
@@ -441,7 +441,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):   \n",
-    "    distance_between = distance(fred, neighbor)\n",
+    "    distance_between = distance(first_neighbor, neighbor)\n",
     "    second_neighbor['distance'] = distance_between\n",
     "    return second_neighbor"
    ]
