automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,20 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):   \n",
-    "    distance_between = distance(first_neighbor, neighbor)\n",
+    "    distance_between = distance(first_neighbor, second_neighbor)\n",
     "    second_neighbor['distance'] = distance_between\n",
     "    return second_neighbor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +508,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.123105625617661},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 4.123105625617661},\n",
-       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 4.123105625617661},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 4.123105625617661},\n",
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
