--- a/index.ipynb
+++ b/index.ipynb
@@ -533,7 +533,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    "
+    "    distance_all(fred, neighbors)\n"
    ]
   },
   {
