automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -533,7 +533,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    mydistance_all(first_neighbor, neighbors)\n"
+    "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
+    "    list(map)\n"
    ]
   },
   {
