--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
-    "    list(filter(lambda neighbor: neighbor['distance'] < number))\n"
+    "    list(filter(lambda neighbor: neighbor['distance'] < number),)\n"
    ]
   },
   {
