automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -526,23 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 97,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
-    "    list(filter(lambda neighbor: neighbor['distance'] < number),)\n"
+    "    return list(filter(lambda neighbor: neighbor['distance'] < number),neighbors)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
