--- a/index.ipynb
+++ b/index.ipynb
@@ -533,7 +533,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
-    "    return list(filter(lambda neighbor: neighbor['distance'] < number, my_neighbors))\n"
+    "    return sorted_neighbors\n",
+    "    #return list(filter(lambda neighbor: neighbor['distance'] < number, my_neighbors))\n"
    ]
   },
   {
