--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    how_many = number or len\n",
+    "    how_many = number or len(neighbors) - 1\n",
+    "    \n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(my_neighbors, key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors\n",
