automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "    how_many = number or len(neighbors) - 1\n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(my_neighbors, key=lambda neighbor: neighbor['distance'])\n",
-    "    return sorted_neighbors[]\n",
+    "    return sorted_neighbors[how_many:]\n",
     "    #return list(filter(lambda neighbor: neighbor['distance'] < number, my_neighbors))\n"
    ]
   },
