--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,26 +534,23 @@
     "    how_many = number or len(neighbors) - 1\n",
     "    my_neighbors = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(my_neighbors, key=lambda neighbor: neighbor['distance'])\n",
-    "    return sorted_neighbors[how_many:]\n",
+    "    return sorted_neighbors[:how_many]\n",
     "    #return list(filter(lambda neighbor: neighbor['distance'] < number, my_neighbors))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
-       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
-       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504}]"
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
